# events_face

./: .env.example  Dockerfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
src/: urls.py
src/auth/: apps.py
src/core/: settings.py  wsgi.py
src/custom_auth/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/custom_auth/migrations/: 0001_initial.py
src/events/: admin.py  apps.py  filters.py  models.py  pagination.py  serializers.py  views.py
src/events/migrations/: 0001_initial.py
src/sync/: admin.py  apps.py  models.py
src/sync/management/commands/: sync_events.py
src/sync/migrations/: 0001_initial.py
